--- a/index.html
+++ b/index.html
@@ -30,199 +30,199 @@
     <!-- Your table -->
     <table border="1" class="dataframe">
         <tr>
-            <td>Washington</td>
+            <td><a href="/washington.html">Washington</a></td>
             <td>610</td>
           </tr>
           <tr>
-            <td>California</td>
+            <td><a href="/california.html">California</a></td>
             <td>422</td>
           </tr>
           <tr>
-            <td>Florida</td>
+            <td><a href="/florida.html">Florida</a></td>
             <td>306</td>
           </tr>
           <tr>
-            <td>Ohio</td>
+            <td><a href="/ohio.html">Ohio</a></td>
             <td>306</td>
           </tr>
           <tr>
-            <td>Oregon</td>
+            <td><a href="/oregon.html">Oregon</a></td>
             <td>249</td>
           </tr>
           <tr>
-            <td>Illinois</td>
+            <td><a href="/illinois.html">Illinois</a></td>
             <td>238</td>
           </tr>
           <tr>
-            <td>Texas</td>
+            <td><a href="/texas.html">Texas</a></td>
             <td>231</td>
           </tr>
           <tr>
-            <td>Michigan</td>
+            <td><a href="/michigan.html">Michigan</a></td>
             <td>217</td>
           </tr>
           <tr>
-            <td>Missouri</td>
+            <td><a href="/missouri.html">Missouri</a></td>
             <td>159</td>
           </tr>
           <tr>
-            <td>Georgia</td>
+            <td><a href="/georgia.html">Georgia</a></td>
             <td>129</td>
           </tr>
           <tr>
-            <td>Colorado</td>
+            <td><a href="/colorado.html">Colorado</a></td>
             <td>127</td>
           </tr>
           <tr>
-            <td>Pennsylvania</td>
+            <td><a href="/pennsylvania.html">Pennsylvania</a></td>
             <td>120</td>
           </tr>
           <tr>
-            <td>New York</td>
+            <td><a href="/new-york.html">New York</a></td>
             <td>114</td>
           </tr>
           <tr>
-            <td>Kentucky</td>
+            <td><a href="/kentucky.html">Kentucky</a></td>
             <td>114</td>
           </tr>
           <tr>
-            <td>West Virginia</td>
+            <td><a href="/west-virginia.html">West Virginia</a></td>
             <td>104</td>
           </tr>
           <tr>
-            <td>Arkansas</td>
+            <td><a href="/arkansas.html">Arkansas</a></td>
             <td>103</td>
           </tr>
           <tr>
-            <td>Oklahoma</td>
+            <td><a href="/oklahoma.html">Oklahoma</a></td>
             <td>99</td>
           </tr>
           <tr>
-            <td>Idaho</td>
+            <td><a href="/idaho.html">Idaho</a></td>
             <td>97</td>
           </tr>
           <tr>
-            <td>Tennessee</td>
+            <td><a href="/tennessee.html">Tennessee</a></td>
             <td>96</td>
           </tr>
           <tr>
-            <td>Alabama</td>
+            <td><a href="/alabama.html">Alabama</a></td>
             <td>95</td>
           </tr>
           <tr>
-            <td>North Carolina</td>
+            <td><a href="/north-carolina.html">North Carolina</a></td>
             <td>90</td>
           </tr>
           <tr>
-            <td>Wisconsin</td>
+            <td><a href="/wisconsin.html">Wisconsin</a></td>
             <td>87</td>
           </tr>
           <tr>
-            <td>Arizona</td>
+            <td><a href="/arizona.html">Arizona</a></td>
             <td>85</td>
           </tr>
           <tr>
-            <td>Virginia</td>
+            <td><a href="/virginia.html">Virginia</a></td>
             <td>81</td>
           </tr>
           <tr>
-            <td>Indiana</td>
+            <td><a href="/indiana.html">Indiana</a></td>
             <td>79</td>
           </tr>
           <tr>
-            <td>Minnesota</td>
+            <td><a href="/minnesota.html">Minnesota</a></td>
             <td>73</td>
           </tr>
           <tr>
-            <td>New Jersey</td>
+            <td><a href="/new-jersey.html">New Jersey</a></td>
             <td>68</td>
           </tr>
           <tr>
-            <td>Utah</td>
+            <td><a href="/utah.html">Utah</a></td>
             <td>59</td>
           </tr>
           <tr>
-            <td>Iowa</td>
+            <td><a href="/iowa.html">Iowa</a></td>
             <td>56</td>
           </tr>
           <tr>
-            <td>Montana</td>
+            <td><a href="/montana.html">Montana</a></td>
             <td>51</td>
           </tr>
           <tr>
-            <td>Kansas</td>
+            <td><a href="/kansas.html">Kansas</a></td>
             <td>45</td>
           </tr>
           <tr>
-            <td>South Carolina</td>
+            <td><a href="/south-carolina.html">South Carolina</a></td>
             <td>43</td>
           </tr>
           <tr>
-            <td>New Mexico</td>
+            <td><a href="/new-mexico.html">New Mexico</a></td>
             <td>42</td>
           </tr>
           <tr>
-            <td>Louisiana</td>
+            <td><a href="/louisiana.html">Louisiana</a></td>
             <td>41</td>
           </tr>
           <tr>
-            <td>Maryland</td>
+            <td><a href="/maryland.html">Maryland</a></td>
             <td>35</td>
           </tr>
           <tr>
-            <td>Massachusetts</td>
+            <td><a href="/massachusetts.html">Massachusetts</a></td>
             <td>29</td>
           </tr>
           <tr>
-            <td>Wyoming</td>
+            <td><a href="/wyoming.html">Wyoming</a></td>
             <td>27</td>
           </tr>
           <tr>
-            <td>Mississippi</td>
+            <td><a href="/mississippi.html">Mississippi</a></td>
             <td>22</td>
           </tr>
           <tr>
-            <td>Connecticut</td>
+            <td><a href="/connecticut.html">Connecticut</a></td>
             <td>21</td>
           </tr>
           <tr>
-            <td>Alaska</td>
+            <td><a href="/alaska.html">Alaska</a></td>
             <td>21</td>
           </tr>
           <tr>
-            <td>Maine</td>
+            <td><a href="/maine.html">Maine</a></td>
             <td>18</td>
           </tr>
           <tr>
-            <td>Nebraska</td>
+            <td><a href="/nebraska.html">Nebraska</a></td>
             <td>15</td>
           </tr>
           <tr>
-            <td>New Hampshire</td>
+            <td><a href="/new-hampshire.html">New Hampshire</a></td>
             <td>14</td>
           </tr>
           <tr>
-            <td>South Dakota</td>
+            <td><a href="/south-dakota.html">South Dakota</a></td>
             <td>13</td>
           </tr>
           <tr>
-            <td>Vermont</td>
+            <td><a href="/vermont.html">Vermont</a></td>
             <td>10</td>
           </tr>
           <tr>
-            <td>Nevada</td>
+            <td><a href="/nevada.html">Nevada</a></td>
             <td>7</td>
           </tr>
           <tr>
-            <td>Delaware</td>
+            <td><a href="/delaware.html">Delaware</a></td>
             <td>5</td>
           </tr>
           <tr>
-            <td>Rhode Island</td>
+            <td><a href="/rhode-island.html">Rhode Island</a></td>
             <td>5</td>
           </tr>
           <tr>
-            <td>North Dakota</td>
+            <td><a href="/north-dakota.html">North Dakota</a></td>
             <td>4</td>
           </tr>
     </table>
